--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GearUp</title>
-  <link rel="shortcut icon" type="x-icon" href="pictures/rallykit.png">
+  <link rel="shortcut icon" type="x-icon" href="rallykit.png">
 
   <link rel="stylesheet" href="products.css">
 
@@ -75,7 +75,7 @@
 
     <div class="product">
       <div class="image">
-        <img src="pictures/My%20project.png" alt="akrapovic"width="250" height="230">
+        <img src="My%20project.png" alt="akrapovic"width="250" height="230">
       </div>
       <div class="namePrice">
         <h3>Akrapovic</h3>
@@ -97,7 +97,7 @@
 
     <div class="product">
       <div class="image">
-        <img src="pictures/Racing%20kit.png" alt="Racing kit"width="250" height="230">
+        <img src="Racing%20kit.png" alt="Racing kit"width="250" height="230">
       </div>
       <div class="namePrice">
         <h3>Racing Kit</h3>
@@ -117,7 +117,7 @@
     </div>
     <div class="product">
       <div class="image">
-        <img src="pictures/rallykit.png" alt="Rally kit"width="250" height="230">
+        <img src="rallykit.png" alt="Rally kit"width="250" height="230">
       </div>
       <div class="namePrice">
         <h3>Rally Kit</h3>
@@ -137,7 +137,7 @@
     </div>
     <div class="product">
       <div class="image">
-        <img src="pictures/chainteeth.png" alt="Racing kit"width="244" height="230">
+        <img src="chainteeth.png" alt="Racing kit"width="244" height="230">
       </div>
       <div class="namePrice">
         <h3>Chain sprocket</h3>
@@ -157,7 +157,7 @@
     </div>
     <div class="product">
       <div class="image">
-        <img src="pictures/toolkit.png" alt="Tool kit"width="244" height="230">
+        <img src="toolkit.png" alt="Tool kit"width="244" height="230">
       </div>
       <div class="namePrice">
         <h3>Tool kit</h3>
@@ -177,7 +177,7 @@
     </div>
     <div class="product">
       <div class="image">
-        <img src="pictures/paintt.png" alt="Paint"width="244" height="230">
+        <img src="paintt.png" alt="Paint"width="244" height="230">
       </div>
       <div class="namePrice">
         <h3>Paint</h3>
