--- a/Contactus.html
+++ b/Contactus.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>GearUp</title>
-  <link rel="shortcut icon" type="x-icon" href="pictures/rallykit.png">
+  <link rel="shortcut icon" type="x-icon" href="rallykit.png">
 
   <link rel="stylesheet" href="contactus.css">
 </head>
@@ -11,7 +11,7 @@
 <div>
   <ul>
     <li class ="active">
-      <a href="projectk.html" >HOME</a></li>
+      <a href="index.html" >HOME</a></li>
     <li><a href="Offers.html" >OFFERS</a></li>
     <li><a href="products.html" >PRODUCTS</a></li>
     <li><a href="Contactus.html" >CONTACT</a></li>
