--- a/Offers.html
+++ b/Offers.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <title>GearUp</title>
   <link rel="stylesheet" href="offers.css">
-  <link rel="shortcut icon" type="x-icon" href="pictures/rallykit.png">
+  <link rel="shortcut icon" type="x-icon" href="rallykit.png">
 
 </head>
 <body>
 <div>
   <ul>
     <li class ="active">
-      <a href="projectk.html" >HOME</a></li>
+      <a href="index.html" >HOME</a></li>
     <li><a href="Offers.html" >OFFERS</a></li>
     <li><a href="products.html" >PRODUCTS</a></li>
     <li><a href="Contactus.html" >CONTACT</a></li>
