--- a/products.html
+++ b/products.html
@@ -14,7 +14,7 @@
 <div>
   <ul>
     <li class ="active">
-      <a href="projectk.html" >HOME</a></li>
+      <a href="index.html" >HOME</a></li>
     <li><a href="Offers.html" >OFFERS</a></li>
     <li><a href="products.html" >PRODUCTS</a></li>
     <li><a href="Contactus.html" >CONTACT</a></li>
@@ -31,7 +31,7 @@
 
     <div class="product">
       <div class="image">
-        <img src="pictures/brakes.png" alt="brakes" width="250" height="230">
+        <img src="brakes.png" alt="brakes" width="250" height="230">
       </div>
       <div class="namePrice">
         <h3>Brakes</h3>
@@ -53,7 +53,7 @@
 
     <div class="product">
       <div class="image">
-        <img src="pictures/tyre.png" alt="tyre" >
+        <img src="tyre.png" alt="tyre" >
       </div>
       <div class="namePrice">
         <h3>Tyre</h3>
