--- a/signup page.html
+++ b/signup page.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>GearUp</title>
   <link rel="stylesheet" href="signupk.css">
-  <link rel="shortcut icon" type="x-icon" href="pictures/rallykit.png">
+  <link rel="shortcut icon" type="x-icon" href="rallykit.png">
 
 
 
@@ -13,7 +13,7 @@
 <div>
   <ul>
     <li class ="active">
-      <a href="projectk.html" >HOME</a></li>
+      <a href="index.html" >HOME</a></li>
     <li><a href="Offers.html" >OFFERS</a></li>
     <li><a href="products.html" >PRODUCTS</a></li>
     <li><a href="Contactus.html" >CONTACT</a></li>
