--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
   <meta charset="UTF-8">
-  <link rel="shortcut icon" type="x-icon" href="pictures/rallykit.png">
+  <link rel="shortcut icon" type="x-icon" href="rallykit.png">
   <link rel="stylesheet" href="kpor.css">
 
   <title>GearUp</title>
@@ -12,7 +12,7 @@
 <div>
   <ul>
     <li class ="active">
-      <a href="projectk.html" >HOME</a></li>
+      <a href="index.html" >HOME</a></li>
     <li><a href="Offers.html" >OFFERS</a></li>
     <li><a href="products.html" >PRODUCTS</a></li>
     <li><a href="Contactus.html" >CONTACT</a></li>
